Fix Safari layout issue on webinars page

--- a/src/app/pages/webinars/webinars.scss
+++ b/src/app/pages/webinars/webinars.scss
@@ -18,6 +18,7 @@
         @include wider-than($phone-max) {
             display: grid;
             grid-template-columns: 1fr 1fr;
+            grid-template-rows: 100%;
         }
 
         .text-side {
